docs/docs/v3/public-library.md
# Public Library

This is documentation for v3, which is no longer
					actively maintained.

For up-to-date documentation, see the latest version.
      Public Library
Description
On TradingView it’s possible to use pre-built indicators and write
custom ones using Pine Script. Users who write their own scripts can
publish them to the Public Library. You can search the library for
needed scripts before writing one. You can also ask users who publish
scripts for help by sending them a private message (PM) on TradingView.
Public Library is the storage of all user-published scripts. All
published scripts can be viewed on the
Scripts page, or in the
Indicators Public Library tab:

Copying a script from Public to Personal Library
To copy a script choose one of two methods:

Click the star next to the needed script in the Indicators window:

Open the needed script on the
SCRIPTS page and click the
Add to Favorite Scripts button:

The script will be added to your Favorites section in the Indicators
window, where you can easily find it when needed:

Scripts in the Indicators window are sorted by popularity: the more
users have favorited the script, the higher it will be displayed in the
Indicators window:

Editing a script from Public Library
To edit a script from Public Library:

Open the script (the script will be unavailable for editing and will
be colored lighter than normal):

Click on the Save As… button, enter the desired name and save a
copy to your personal library:

A saved copy of the script will appear in the list of your scripts in
the Indicators My Scripts tab:

Now you can open and edit the script.
If the same script is published more than once, a notification on older
versions will appear that a new version is available.
Searching for a script
To search for a script, use the Search field in the Indicators
dialog:

This will search both your Personal and Public Library at the same time: