docs/docs/v4/public-library.md
# Public Library

This is documentation for v4, which is no longer
					actively maintained.

For up-to-date documentation, see the latest version.
      Public Library
Description
On TradingView you may choose from our built-in scripts, from the
user-published scripts in the Public Library, or write your own custom
scripts using Pine Script. You can search the library for scripts before
writing one. You may also ask users who publish scripts for help by
sending them a private message (PM) on TradingView.
The Public Library contains all user-published scripts. All published
scripts can be viewed either from the
Scripts section of
tradingview.com’s page, or from the Indicators Public Library tab:

Copying a script from the Public to your Personal Library
To copy a script, use one of the two following methods:

Click the star next to the needed script in the Indicators window:

Open the needed script from the
Scripts section and click the
Add to Favorite Scripts button:

The script will be added to your Favorites section in the Indicators
window, where you can easily find it when needed:

Scripts in the Indicators window are sorted by popularity. Scripts
with the most likes appear first:

Editing a script from the Public Library
To edit a script from the Public Library:

Open the script (the script will be unavailable for editing and will
be colored lighter than normal):

Click on the Make a Copy… button, enter the desired name and
save a copy in your personal library:

A saved copy of the script will appear in the list of your scripts in
the Indicators My Scripts tab:

Now you can open and edit the script.
If the same script is published more than once, a notification on older
versions will appear, indicating a new version is available.
Searching for a script
To search for a script, use the Search field in the Indicators
dialog:

This will search both your Personal and Public Library at the same time.
You may also search for scripts from the tradingview.com home page by
first selecting Scripts from the Ticker dropdown menu and entering
your search criteria.         Previous       Publishing scripts      Next   Release notes              On this pageDescriptionCopying a script from the Public to your Personal LibraryEditing a script from the Public LibrarySearching for a script